# proof-job-zk

./: .gitignore  Cargo.toml  Makefile  README.MD
contracts/: foundry.toml
contracts/broadcast/Deploy.s.sol/31337/: run-latest.json
contracts/broadcast/DeployDeterministic.s.sol/31337/: run-1770192514.json
contracts/script/: Deploy.s.sol  DeployDeterministic.s.sol
contracts/src/: JobRegistry.sol
contracts/src/interfaces/: IJobRegistry.sol  IRiscZeroVerifier.sol
contracts/src/mocks/: MockRiscZeroVerifier.sol
contracts/test/: JobRegistry.t.sol
crates/contract-client/: Cargo.toml
crates/contract-client/src/: lib.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: api.rs  config.rs  gossip_handler.rs  lib.rs  main.rs  persistence.rs  rebroadcast.rs
crates/coordinator/tests/: coordinator_tests.rs
crates/core/: Cargo.toml
crates/core/src/: enums.rs  gossip.rs  ids.rs  job.rs  lib.rs
crates/core/tests/: serialization.rs
crates/e2e/: Cargo.toml  lib.rs
crates/e2e/tests/: e2e.rs
crates/gossip/: Cargo.toml
crates/gossip/src/: main.rs
crates/gossip/src/gossip/: mod.rs
crates/gossip/tests/: gossip_exchange.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/indexer/tests/: indexer_tests.rs
crates/methods/: Cargo.toml
crates/methods/guest/: Cargo.toml
crates/methods/guest/src/: main.rs
crates/methods/tests/: guest_tests.rs
crates/prover/: Cargo.toml
crates/prover/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: handler.rs  lib.rs  main.rs  proof.rs
crates/worker/tests/: onchain_tests.rs  worker_tests.rs
