[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
alloy = { version = "1", features = ["full"] }
alloy-primitives = { version = "1", features = ["serde"] }
bincode = { version = "2.0.1", features = ["serde"] }
alloy-sol-types = "1"
