[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
alloy = { version = "1", features = ["full"] }
alloy-primitives = { version = "1", features = ["serde"] }
bincode = { version = "2.0.1", features = ["serde"] }
alloy-sol-types = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
bytes = "1"
lru = "0.12"
rand = "0.8"
sha2 = "0.10"
axum = "0.7"
dashmap = "6"
hex = "0.4"
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
gossip = { path = "crates/gossip" }
proof_core = { path = "crates/core", package = "core" }
contract-client = { path = "crates/contract-client" }
indexer = { path = "crates/indexer" }
