[package]
name = "coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
proof_core = { workspace = true }
gossip = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
alloy-primitives = { workspace = true }
contract-client = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tower = { workspace = true }
http-body-util = { workspace = true }
alloy-primitives = { workspace = true }
