[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
name = "proof_core"

[dependencies]
serde = { workspace = true }
alloy = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
ed25519-dalek = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
