[package]
name = "e2e"
version = "0.1.0"
edition = "2021"

# This crate exists only for integration tests
[lib]
path = "lib.rs"

[dependencies]

[dev-dependencies]
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
