[package]
name = "gossip"
version = "0.1.0"
edition = "2021"

[dependencies]
proof_core = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
bincode = { workspace = true }
lru = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }
tracing = "0.1"

[dev-dependencies]
alloy-primitives = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
