[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
proof_core = { workspace = true }
gossip = { workspace = true }
prover = { path = "../prover" }
tokio = { workspace = true }
tracing = "0.1"
rand = { workspace = true }

[dev-dependencies]
coordinator = { path = "../coordinator" }
alloy-primitives = { workspace = true }
dashmap = { workspace = true }
